# fiio-k13-control

./: README.md  package.json
scripts/: probe_ble.py  probe_features.py
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: autoeq.rs  ble_device.rs  ble_protocol.rs  commands.rs  device.rs  error.rs  lib.rs  main.rs  protocol.rs
src/lib/: api.ts  store.svelte.ts
src/lib/components/: AutoEQ.svelte  Config.svelte  DeviceSettings.svelte  Dropdown.svelte  Equalizer.svelte  Status.svelte
src/routes/: +page.svelte
