[package]
name = "fiio-k13-control"
version = "0.1.0"
description = "Desktop controller for FiiO K13 R2R DAC/AMP"
authors = ["smookeydev"]
edition = "2024"

[lib]
name = "fiio_k13_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusb = "0.9.4"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
thiserror = "2"
btleplug = "0.11"
tokio = { version = "1", features = ["sync", "time"] }
uuid = "1"
futures = "0.3"
